# sr_ronex_arm

./: README.md
sr_ronex_arm_controllers/: CMakeLists.txt  controller_plugins.xml  package.x  package.xml
sr_ronex_arm_controllers/include/sr_ronex_arm_controllers/: position_servo_controller.hpp  position_servo_controller.hpp~  position_velocity_controller.hpp
sr_ronex_arm_controllers/src/: position_servo_controller.cpp  position_velocity_controller.cpp
sr_ronex_arm_description/: controllers.yaml  launch_robot.launch  launch_robot_no_ctrl.launch  manifest.xml
sr_ronex_arm_description/launch/: display.launch  gazebo.launch
sr_ronex_arm_description/launch/.svn/: entries
sr_ronex_arm_description/meshes/: link_1.STL  link_2.STL
sr_ronex_arm_description/meshes/.svn/: entries
sr_ronex_arm_description/meshes/.svn/text-base/: base_link.STL.svn-base  link_3.STL.svn-base  link_4.STL.svn-base  link_5.STL.svn-base  tooth_1.STL.svn-base  tooth_2.STL.svn-base
sr_ronex_arm_description/robots/: ronex_arm_v1.URDF  sr_ronex_arm.urdf
sr_ronex_arm_description/robots/.svn/: entries
sr_ronex_arm_description/textures/.svn/: entries
sr_ronex_arm_moveit/: CMakeLists.txt  package.xml
sr_ronex_arm_moveit/include/sr_ronex_arm_moveit/: sh_kinematics.hpp
sr_ronex_arm_moveit/launch/: move_the_arm.launch  sh_kinematics.launch
sr_ronex_arm_moveit/rviz/: sr_ronex_arm_moveit.rviz
sr_ronex_arm_moveit/src/: sh_kinematics.cpp  sh_kinematics_node.cpp
sr_ronex_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sr_ronex_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sr_ronex_arm_description.srdf
sr_ronex_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
sr_ronex_arm_transmissions/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  transmission_plugin.xml
sr_ronex_arm_transmissions/include/sr_ronex_arm_transmissions/: ronex_arm_transmission.hpp  ronex_arm_transmission.hpp~
sr_ronex_arm_transmissions/include/sr_ronex_arm_transmissions/mapping/general_io/: command_to_servo.hpp  command_to_servo.hpp~
sr_ronex_arm_transmissions/src/: ronex_arm_transmission.cpp  ronex_arm_transmission.cpp~
sr_ronex_arm_transmissions/src/mapping/general_io/: command_to_servo.cpp  command_to_servo.cpp~
test_servo_control/: CMakeLists.txt  joint_sequence  package.xml  recon.launch  remap.py  remap.py~  script.py  sensors.py  target_publisher.py  target_republisher.py  target_script.py
